--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       </div>    
     </div>
 
-      <div class="header-main">
+    <div class="header-main">
+      <div class="header-main container">
             <div class="logo">
                 <a href="index.html"><h2>INTERIOR</h2></a>
             </div>
@@ -61,26 +62,29 @@
                 <i class="fa-solid fa-bars"></i>
               </div></a>
             </div>
-      
       </div>
-
-
+    </div>
   </div>
-  <ul class="menu-drop">
-    <li><a href="">TRANG CHỦ</a></li>
-    <li><a href="">SẢN PHẨM<i class="fa-solid fa-angle-down"></i></a>
-      <ul class="box-menu">
-        <li><a href="">BÀN</a></li>
-        <li><a href="">GHẾ</a></li>
-        <li><a href="">GIƯỜNG</a></li>
-        <li><a href="">TỦ</a></li>
-        <li><a href="">KỆ</a></li>
-      </ul>
-    </li>
-    <li><a href="">TIN TỨC</a></li>
-    <li><a href="">LIÊN HỆ</a></li>
-    <li><a href="">GIỚI THIỆU</a></li>
-  </ul>
+
+  <div class="menu">
+    <div class="menu-main container">
+      <ul class="menu-drop">
+        <li><a href="">TRANG CHỦ</a></li>
+        <li><a href="">SẢN PHẨM</a>
+          <!-- <i class="fa-solid fa-angle-down"></i></a>
+          <ul class="box-menu">
+            <li><a href="">BÀN</a></li>
+            <li><a href="">GHẾ</a></li>
+            <li><a href="">GIƯỜNG</a></li>
+            <li><a href="">TỦ</a></li>
+            <li><a href="">KỆ</a></li>
+          </ul> -->
+        </li>
+        <li><a href="">TIN TỨC</a></li>
+        <li><a href="">LIÊN HỆ</a></li>
+        <li><a href="">GIỚI THIỆU</a></li>
+      </ul></div>
+    </div>
 
 
 
@@ -283,7 +287,7 @@
 <div class="footer">
   <div class="container footer">
     <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="col-lg-3 col-md-6 col-sm-12">
       <h2>INTERIOR</h2>
       <h4 class="name">Công Ty Cổ Phần Bán Lẻ<br> Nội Thất Số Interior</h4>
       <div class="bottom">
