--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
     
       <div class="item">
-        <div class="product-img"><img src="./assets/image/2.jpg" alt=""></div>
+        <div class="product-img"><img src="./assets/image/2.JPG" alt=""></div>
         <div class="product-info">
           <h6 class="pro-title">Ghế Soto Chair</h6>
           <div class="pro-price">6.550.000 đ</div>
