--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
   <div class="header">
     <div class="header-main">
       <div class="container">
-            <!-- <span class="hide"><a href=""><div class="bars">
-              <i class="fa-solid fa-bars"></i>
-            </div></a>
-            </span> -->
-            <div class="repon">
+            <div class="repon hide">
             <div id="mySidenav" class="sidenav">
               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-              <input type="text" id="mySearch" placeholder="Tìm kiếm sản phẩm..">
+
+              <div class="d-flex align-items-center justify-content-end">
+                <input type="text" id="mySearch" placeholder="Tìm kiếm sản phẩm...">
+                <div class="search-icon text-black"><i class="fa-solid fa-magnifying-glass"></i></div>
+              </div>
+
               <a href="#"><i class="fa-solid fa-house"></i>Trang chủ</a>
               <a href="#"><i class="fa-solid fa-couch"></i>Sản phẩm</a>
               <a href="#"><i class="fa-solid fa-newspaper"></i>Tin tức</a>
@@ -53,8 +54,15 @@
               <a href="#"><i class="fa-solid fa-address-card"></i>Giới thiệu</a>
               <p class="text-center">© 2007 - 2023 Công Ty Cổ Phần Bán Lẻ Nội Thất Số Interior</p>
             </div>
-            <i style="font-size:30px; cursor:pointer" onclick="openNav()"onclick="openNav()" class="fa-solid fa-bars"></i>
+
+
+            <i style="font-size:26px; cursor:pointer" onclick="openNav()"onclick="openNav()" class="fa-solid fa-bars"></i>
             </div>
+            <!-- <div class="menu-mb" onclick="openNav()">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div> -->
 
             <div class="logo">
                 <a href="index.html"><h2>INTERIOR</h2></a>
@@ -65,7 +73,6 @@
             </form></div>
             
             <div class="person">
-              <div class="search-icon text-black"><i class="fa-solid fa-magnifying-glass"></i></div>
               <a href="">
                 <div class="user">
                   <i class="fas fa-user-alt"></i>
