--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <div class="header-main">
       <div class="container">
             <div class="repon hide">
-            <div id="mySidenav" class="sidenav">
+            <div id="mySidenav" class="sidenav dp-flex flex-column">
               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-              <div class="d-flex align-items-center justify-content-end">
+              <div class="d-flex align-items-center justify-content-start">
                 <input type="text" id="mySearch" placeholder="Tìm kiếm sản phẩm...">
                 <div class="search-icon text-black"><i class="fa-solid fa-magnifying-glass"></i></div>
               </div>
-
+              <div class="menu-mb">
               <a href="#"><i class="fa-solid fa-house"></i>Trang chủ</a>
               <a href="#"><i class="fa-solid fa-couch"></i>Sản phẩm</a>
               <a href="#"><i class="fa-solid fa-newspaper"></i>Tin tức</a>
@@ -54,9 +54,10 @@
               <a href="#"><i class="fa-solid fa-address-card"></i>Giới thiệu</a>
               <p class="text-center">© 2007 - 2023 Công Ty Cổ Phần Bán Lẻ Nội Thất Số Interior</p>
             </div>
+            </div>
 
 
-            <i style="font-size:26px; cursor:pointer" onclick="openNav()"onclick="openNav()" class="fa-solid fa-bars"></i>
+            <i style="font-size:26px; cursor:pointer" onclick="openNav()"onclick="openNav()" class="fa-solid fa-bars mbicon"></i>
             </div>
             <!-- <div class="menu-mb" onclick="openNav()">
               <div class="bar1"></div>
@@ -77,7 +78,8 @@
                 <div class="user">
                   <i class="fas fa-user-alt"></i>
                 </div></a>
-              <a href=""><div class="cart">
+              <a href="">
+                <div class="cart">
                 <i class="fas fa-shopping-cart"></i><div class="number-cart">0</div>
               </div></a>
             </div>
@@ -155,7 +157,7 @@
 
   <div class="service container">
     <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-12 service1">
+      <div class="col-6 col-lg-3 service1">
         <div class="service-icon">
         <i class="fa fa-check"></i></div>
         <div class="service-title">
@@ -165,7 +167,7 @@
                     Cam kết sản phẩm chính hãng
                   </div>          
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 service1">
+            <div class="col-6 col-lg-3 service1">
                 <div class="service-icon">
                     <i class="fa fa-truck"></i>
                   </div>
@@ -176,7 +178,7 @@
                     Áp dụng với tất cả các sản phẩm
                   </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 service1">
+            <div class="col-6 col-lg-3 service1">
                 <div class="service-icon">
                     <i class="fa-solid fa-headset"></i>
                   </div>
@@ -187,7 +189,7 @@
                     Hỗ trợ tư vấn 24/7
                   </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 service1">
+            <div class="col-6 col-lg-3 service1">
                 <div class="service-icon">
                     <i class="fa-solid fa-gift"></i>
                   </div>
@@ -450,17 +452,17 @@
                 <div class="carousel-item active">
                   <img src="./assets/image/images 1.png" class="rounded-circle">
                   <p class="client text-light"> Alex Ferguson - Anh Quốc</p>
-                  <p class="comment text-light">“Lorem Ipsum đã trở thành văn bản giả tiêu chuẩn của ngành kể từ những năm 1500, khi một nhà in không rõ danh tính lấy một bộ sưu tập các loại.”</p>
+                  <p class="comment text-light fst-italic fw-normal">“Lorem Ipsum đã trở thành văn bản giả tiêu chuẩn của ngành kể từ những năm 1500, khi một nhà in không rõ danh tính lấy một bộ sưu tập các loại.”</p>
                 </div>
                 <div class="carousel-item">
                   <img src="./assets/image/images 2.png" class="rounded-circle">
                   <p class="client text-light"> Carlo Ancelotti - Nam Định</p>
-                  <p class="comment text-light">“Lorem Ipsum đã trở thành văn bản giả tiêu chuẩn của ngành kể từ những năm 1500, khi một nhà in không rõ danh tính lấy một bộ sưu tập các loại.”</p>
+                  <p class="comment text-light fst-italic fw-normal">“Lorem Ipsum đã trở thành văn bản giả tiêu chuẩn của ngành kể từ những năm 1500, khi một nhà in không rõ danh tính lấy một bộ sưu tập các loại.”</p>
                 </div>
                 <div class="carousel-item">
                   <img src="./assets/image/images 3.png" class="rounded-circle">
                   <p class="client text-light"> Jürgen Klopp - Hà Nội</p>
-                  <p class="comment text-light">“Lorem Ipsum đã trở thành văn bản giả tiêu chuẩn của ngành kể từ những năm 1500, khi một nhà in không rõ danh tính lấy một bộ sưu tập các loại.”</p>
+                  <p class="comment text-light fst-italic fw-normal">“Lorem Ipsum đã trở thành văn bản giả tiêu chuẩn của ngành kể từ những năm 1500, khi một nhà in không rõ danh tính lấy một bộ sưu tập các loại.”</p>
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
