--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="logo">
                 <a href="index.html"><h2>INTERIOR</h2></a>
             </div>
-            <div class="search"><form class="search-box">
+            <div class="search"><form class="search-box d-flex justify-content-center">
                 <input class="search-type" type="input" placeholder="Tìm kiếm sản phẩm" aria-label="">
                 <button class="button" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form></div>
@@ -156,7 +156,7 @@
 
 
   <div class="service container">
-    <div class="row">
+    <div class="row gap-0">
       <div class="col-6 col-lg-3 service1">
         <div class="service-icon">
         <i class="fa fa-check"></i></div>
