--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="user">
                   <i class="fas fa-user-alt"></i>
                 </div></a>
-              <a href="">
+              <a href="./cart.html">
                 <div class="cart">
                 <i class="fas fa-shopping-cart"></i><div class="number-cart">0</div>
               </div></a>
@@ -488,7 +488,7 @@
   <div class="container footer">
     <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
-      <h2>INTERIOR</h2>
+      <div class="logo"><h2>INTERIOR</h2></div>
       <h4 class="name">Công Ty Cổ Phần Bán Lẻ<br> Nội Thất Số Interior</h4>
       <div class="bottom">
         <span class="follow">Theo dõi chúng tôi<br>
@@ -520,7 +520,7 @@
               <a href="mailto:someone@example.com"><i class="fa-solid fa-envelope"></i>abc@gmail.com</a>
             </li>
             <li>
-              <a href="tel:(+84) 12345678"><i class="fa-solid fa-phone-volume"></i>(+84) 12345678</a>
+              <a href="tel:(+84) 355884026"><i class="fa-solid fa-phone-volume"></i>(+84) 355884026</a>
             </li>
         </ul>
         <div class="trust">
