--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </ul> -->
         </li>
         <li><a href="">TIN TỨC</a></li>
-        <li><a href="">LIÊN HỆ</a></li>
+        <li><a href="./contact.html">LIÊN HỆ</a></li>
         <li><a href="">GIỚI THIỆU</a></li>
       </ul></div>
     </div>
