--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior</title>
+    <title>Giỏ hàng</title>
     <link rel="icon" href="./assets/image/interior.png">
 
     <!-- Import bootstrap -->
@@ -91,14 +91,14 @@
         <li><a href="">SẢN PHẨM</a></li>
         <li><a href="">TIN TỨC</a></li>
         <li><a href="./contact.html">LIÊN HỆ</a></li>
-        <li><a href="">GIỚI THIỆU</a></li>
+        <li><a href="./present.html">GIỚI THIỆU</a></li>
       </ul></div>
     </div>
   </div>
   <div class="cart-page container pb-5">
         <h6 class="name-page mt-5"><a href="./index.html">Trang chủ</a>/Giỏ hàng</h6>
         <label for="show-shopping-cart"></label>
-        <h4 class="text-center pb-4">GIỎ HÀNG</h4>
+        <h4 class="text-center pb-4 pt-5">GIỎ HÀNG</h4>
 
         <div class="shopping-cart-empty">
             <p class="text-center pb-5">Giỏ hàng đang trống</p>
