--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior</title>
+    <title>Liên hệ</title>
     <link rel="icon" href="./assets/image/interior.png">
 
     <!-- Import bootstrap -->
@@ -92,7 +92,7 @@
         <li><a href="">SẢN PHẨM</a></li>
         <li><a href="">TIN TỨC</a></li>
         <li><a class="text-primary" href="./contact.html">LIÊN HỆ</a></li>
-        <li><a href="">GIỚI THIỆU</a></li>
+        <li><a href="./present.html">GIỚI THIỆU</a></li>
       </ul></div>
     </div>
   </div>
