--- a/cart.html
+++ b/cart.html
@@ -89,7 +89,7 @@
       <ul class="menu-drop">
         <li><a href="./index.html">TRANG CHỦ</a></li>
         <li><a href="">SẢN PHẨM</a></li>
-        <li><a href="">TIN TỨC</a></li>
+        <li><a href="./news.html">TIN TỨC</a></li>
         <li><a href="./contact.html">LIÊN HỆ</a></li>
         <li><a href="./present.html">GIỚI THIỆU</a></li>
       </ul></div>
