--- a/news.html
+++ b/news.html
@@ -91,7 +91,7 @@
     <div class="menu-main container">
       <ul class="menu-drop">
         <li><a href="./index.html">TRANG CHỦ</a></li>
-        <li><a href="">SẢN PHẨM</a></li>
+        <li><a href="./product.html">SẢN PHẨM</a></li>
         <li><a class="text-primary" href="./news.html">TIN TỨC</a></li>
         <li><a href="./contact.html">LIÊN HỆ</a></li>
         <li><a href="./present.html">GIỚI THIỆU</a></li>
@@ -113,7 +113,7 @@
                             <div class="col-6">
                                 <h6 class="fw-bold fs-5 pb-3">Những ý tưởng thú vị và lựa chọn vật liệu phù hợp khi thiết kế bếp trên sân thượng
                                 </h6>
-                                <p class="desktop fw-medium">Ý tưởng thiết kế nội thất đang ngày càng được làm mới, chuyển mình cho phù hợp với phong cách sống hiện đại ngày nay và đương nhiên không thể bỏ lỡ xu hướng thiết kế bếp trên sân thượng. Thiết kế này mang đến một làn gió mới cho không gian sinh hoạt của gia chủ,...</p><p class="text-info-emphasis text-end fst-italic">26/03/2023</p></div>
+                                <p class="desktop fw-medium">Ý tưởng thiết kế nội thất đang ngày càng được làm mới, chuyển mình cho phù hợp với phong cách sống hiện đại ngày nay và đương nhiên không thể bỏ lỡ xu hướng thiết kế bếp trên sân thượng. Thiết kế này mang đến một làn gió mới cho không gian sinh hoạt của gia chủ,...</p><p class="text-info-emphasis text-end fst-italic"><i class="fa-solid fa-share-nodes"></i>26/03/2023</p></div>
                                 
                                 
                             <div class="col-6 pb-5">
