--- a/detailproduct.html
+++ b/detailproduct.html
@@ -52,11 +52,11 @@
                 <div class="search-icon text-black"><i class="fa-solid fa-magnifying-glass"></i></div>
               </div>
               <div class="menu-mb">
-              <a href="#"><i class="fa-solid fa-house"></i>Trang chủ</a>
-              <a href="#"><i class="fa-solid fa-couch"></i>Sản phẩm</a>
-              <a href="#"><i class="fa-solid fa-newspaper"></i>Tin tức</a>
-              <a href="#"><i class="fa-solid fa-envelope"></i></i>Liên hệ</a>
-              <a href="#"><i class="fa-solid fa-address-card"></i>Giới thiệu</a>
+                <a href="./index.html"><i class="fa-solid fa-house"></i>Trang chủ</a>
+                <a href="./product.html"><i class="fa-solid fa-couch"></i>Sản phẩm</a>
+                <a href="./news.html"><i class="fa-solid fa-newspaper"></i>Tin tức</a>
+                <a href="./contact.html"><i class="fa-solid fa-envelope"></i></i>Liên hệ</a>
+                <a href="./present.html"><i class="fa-solid fa-address-card"></i>Giới thiệu</a>
               <p class="text-center">© 2007 - 2023 Công Ty Cổ Phần Bán Lẻ Nội Thất Số Interior</p>
             </div>
             </div>
@@ -102,7 +102,7 @@
     <div class="detailpro">
         <div class="cart-page container pb-5">
             <h6 class="name-page mt-5">
-                <a href="./index.html">Trang chủ</a>/Sản phẩm
+                <a href="./index.html">Trang chủ</a><a href="./product.html">/Sản phẩm</a>/Sofa Soto Chair
             </h6>
         </div>
         <h4 class=" detailpro text-center pb-5 text-uppercase fw-bold">Sofa Soto Chair</h4>
@@ -116,16 +116,19 @@
                       </div>
                       <div class="imgpro-bottom d-flex justify-content-around">
                         <div class="sm-img selected" onclick="changeBorder(this)">
+                          <img src="./assets/image/2.jpg" alt="" onclick="changeImage(this)">
+                        </div>
+                        <div class="sm-img" onclick="changeBorder(this)">
+                          <img src="./assets/image/2g.JPG" alt="" onclick="changeImage(this)">
+                        </div>
+                        <div class="sm-img" onclick="changeBorder(this)">
                           <img src="./assets/image/2r.jpg" alt="" onclick="changeImage(this)">
                         </div>
                         <div class="sm-img" onclick="changeBorder(this)">
-                          <img src="./assets/image/2.JPG" alt="" onclick="changeImage(this)">
+                          <img src="./assets/image/2h.jpg" alt="" onclick="changeImage(this)">
                         </div>
                         <div class="sm-img" onclick="changeBorder(this)">
-                          <img src="./assets/image/2r.jpg" alt="" onclick="changeImage(this)">
-                        </div>
-                        <div class="sm-img" onclick="changeBorder(this)">
-                          <img src="./assets/image/1.jpg" alt="" onclick="changeImage(this)">
+                          <img src="./assets/image/2k.jpg" alt="" onclick="changeImage(this)">
                         </div>
                       </div>
                     </div>
@@ -136,7 +139,7 @@
                 <div class="col-sm-12 col-md-6 bg-body-tertiary">
                   <div class="infor-pro">
                     <h5 class="text-center p-4">Sofa Soto Chair</h5>
-                    <div class="d-sm-flex justify-content-evenly">
+                    <div class="d-sm-flex justify-content-evenly rating">
                       <div class="pro-rating rate-detail">
                           <i class="fa-solid fa-star"></i>
                           <i class="fa-solid fa-star"></i>
@@ -145,7 +148,7 @@
                           <i class="fa-solid fa-star-half-alt"></i>
                           <div class="rating-num text-dark">(59 đánh giá)</div>
                       </div>
-                      <p class="m-0">Chia sẻ ngay
+                      <p class="social m-0">Chia sẻ ngay
                         <i class="fa-brands fa-facebook mx-1 text-primary"></i>
                         <i class="fa-brands fa-instagram text-danger"></i>
                         <i class="fa-brands fa-twitter mx-1 text-info"></i>  </p>
