--- a/present.html
+++ b/present.html
@@ -50,11 +50,11 @@
                 <div class="search-icon text-black"><i class="fa-solid fa-magnifying-glass"></i></div>
               </div>
               <div class="menu-mb">
-              <a href="#"><i class="fa-solid fa-house"></i>Trang chủ</a>
-              <a href="#"><i class="fa-solid fa-couch"></i>Sản phẩm</a>
-              <a href="#"><i class="fa-solid fa-newspaper"></i>Tin tức</a>
-              <a href="#"><i class="fa-solid fa-envelope"></i></i>Liên hệ</a>
-              <a href="#"><i class="fa-solid fa-address-card"></i>Giới thiệu</a>
+                <a href="./index.html"><i class="fa-solid fa-house"></i>Trang chủ</a>
+                <a href="./product.html"><i class="fa-solid fa-couch"></i>Sản phẩm</a>
+                <a href="./news.html"><i class="fa-solid fa-newspaper"></i>Tin tức</a>
+                <a href="./contact.html"><i class="fa-solid fa-envelope"></i></i>Liên hệ</a>
+                <a href="./present.html"><i class="fa-solid fa-address-card"></i>Giới thiệu</a>
               <p class="text-center">© 2007 - 2023 Công Ty Cổ Phần Bán Lẻ Nội Thất Số Interior</p>
             </div>
             </div>
@@ -90,7 +90,7 @@
     <div class="menu-main container">
       <ul class="menu-drop">
         <li><a href="./index.html">TRANG CHỦ</a></li>
-        <li><a href="">SẢN PHẨM</a></li>
+        <li><a href="./product.html">SẢN PHẨM</a></li>
         <li><a href="./news.html">TIN TỨC</a></li>
         <li><a href="./contact.html">LIÊN HỆ</a></li>
         <li><a class="text-primary" href="./present.html">GIỚI THIỆU</a></li>
