--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <div class="menu">
+  <div class="menu menu-sticky">
     <div class="menu-main container">
       <ul class="menu-drop">
         <li><a href="./index.html">TRANG CHỦ</a></li>
@@ -123,7 +123,7 @@
         <div class="carousel-caption d-block d-md-block">
           <h5>Khuyến mại ngày lễ</h5>
           <p>Giảm giá các mặt hàng trong dịp đại lễ nhằm chi ân khách hàng khi mua từ sản phẩm thứ 2</p>
-          <button class="btn-slide">Chi tiết</button>
+          <a href="./news.html"><button class="btn-slide">Chi tiết</button></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -131,7 +131,7 @@
         <div class="carousel-caption d-block d-md-block">
           <h5>Bộ sưu tập nội thất được yêu thích hè 2023</h5>
           <p>Chúng tôi mang đến những thiết kế độc đáo cho không gian sống của bạn thêm mới mẻ</p>
-          <button class="btn-slide">Mua ngay</button>
+          <a href="./product.html"><button class="btn-slide">Mua ngay</button></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -139,7 +139,7 @@
         <div class="carousel-caption d-block d-md-block">
           <h5>Sản phẩm với xu hướng mang thiên nhiên vào nhà</h5>
           <p>Thiết kế sinh học, sử dụng vật liệu tự nhiên, sử dụng hiệu quả tài nguyên và tính bền vững</p>
-          <button class="btn-slide">Chi tiết</button>
+          <a href="./product.html"><button class="btn-slide">Chi tiết</button></a>
         </div>
       </div>
     </div>
