--- a/product.html
+++ b/product.html
@@ -111,7 +111,7 @@
                 <div class="col-3">
                   <div class="tabfilter">
                     <div class="tab"><h6 class="text-center">LOẠI SẢN PHẨM</h6>
-                      <div class="select-filter">
+                      <div class="select-filter categoryfl">
                         <div><input type="checkbox">Bàn</div>
                         <div><input type="checkbox">Ghế</div>
                         <div><input type="checkbox">Tủ, Kệ</div>
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="tab pt-3"><h6 class="text-center">CHẤT LIỆU</h6>
-                      <div class="select-filter">
+                      <div class="select-filter material">
                         <div><input type="checkbox">Đồ da</div>
                         <div><input type="checkbox">Đồ gỗ</div>
                         <div><input type="checkbox">Thép</div>
@@ -149,12 +149,12 @@
                     <ul class="list-unstyled d-flex flex-row justify-content-end">
                       <li class="upsort"><i class="fas fa-sort-amount-up sortup px-1"></i>Giá cao</li>
                       <li class="downsort"><i class="fas fa-sort-amount-down px-1"></i>Giá thấp</li>
-                      <li><i class="fas fa-eye px-1"></i>Xem nhiều</li>
+                      <li class="rating-sort"><i class="fa-regular fa-heart px-1"></i>Yêu thích</li>
                     </ul>
                   </div>
                     <div class="container">
                         <div class="row" id="product-list">
-                            <div class="col-12 col-sm-6 col-lg-4">
+                            <!-- <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="item">
                                     <a href="#">
                                       <div class="product-img"><img src="./assets/image/1.jpg" alt=""></div>
@@ -360,10 +360,11 @@
                                       </div>
                                     </a>
                                   </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
-                  <div><div class="list-page d-flex justify-content-center align-items-center">
+                  <div>
+                    <!-- <div class="list-page d-flex justify-content-center align-items-center">
                     <i class="fa-solid fa-backward"></i>
                     <ul class="list-unstyled d-flex justify-content-around align-items-center p-4">
                     <li class="text-bg-secondary">1</li>
@@ -372,8 +373,8 @@
                     <li>4</li>
                     <li>5</li></ul>
                     <i class="fa-solid fa-forward"></i>
-                    
-                  </div></div>
+                    </div> -->
+                  </div>
                 </div>
 
 
