--- a/product.html
+++ b/product.html
@@ -74,10 +74,9 @@
             </form></div>
             
             <div class="person">
-              <a href="">
-                <div class="user">
+                <div class="user mx-4" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">
                   <i class="fas fa-user-alt"></i>
-                </div></a>
+                </div>
               <a href="./cart.html">
                 <div class="cart">
                 <i class="fas fa-shopping-cart"></i><div class="number-cart">0</div>
@@ -454,7 +453,7 @@
       <div class="logo"><h2>INTERIOR</h2></div>
       <h4 class="name">Công Ty Cổ Phần Bán Lẻ<br> Nội Thất Số Interior</h4>
       <div class="bottom">
-        <span class="follow">Theo dõi chúng tôi<br>
+        <span class="follow">Kết nối với chúng tôi<br>
           <a href=""><i class="fa-brands fa-square-facebook"></i></a>
           <a href=""><i class="fa-brands fa-square-twitter"></i></i></a>
           <a href=""><i class="fa-brands fa-square-instagram"></i></a>
@@ -465,11 +464,11 @@
     <div class="col-lg-2 col-md-6 col-sm-12 link">
       <h5>Liên kết hữu ích</h5>
       <ul>
-        <li><a href="">Trang chủ</a></li>
-        <li><a href="">Sản phẩm</a></li>
-        <li><a href="">Tin tức</a></li>
-        <li><a href="">Liên hệ</a></li>
-        <li><a href="">Giới thiệu</a></li>
+        <li><a href="./index.html">Trang chủ</a></li>
+        <li><a href="./product.html">Sản phẩm</a></li>
+        <li><a href="./news.html">Tin tức</a></li>
+        <li><a href="./contact.html">Liên hệ</a></li>
+        <li><a href="./present.html">Giới thiệu</a></li>
       </ul>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12 link">
@@ -513,7 +512,45 @@
 
 
 
-
+<div class="modal fade mt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <button class="nav-link nav-item active" role="presentation"
+          id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Đăng nhập</button>
+          <button class="nav-link nav-item" role="presentation" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Đăng ký</button>
+      </ul>
+      <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+          <div class="container px-5 py-3 d-flex flex-column">
+            <input type="email" placeholder="Email hoặc số điện thoại" name="uname" required>
+            <input type="password" placeholder="Mật khẩu" name="psw" required>
+              
+            <button type="button" class="btn btn-primary loginbtn mb-3">Đăng nhập</button>
+            <label>
+              <input type="checkbox" checked="checked" name="remember"> Nhớ mật khẩu
+            </label>
+            <a href="">Bạn quên mật khẩu?</a>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0"><div class="container px-5 py-3 d-flex flex-column">
+          <input type="text" placeholder="Tên tài khoản" name="uname" required>
+          <input type="email" placeholder="Email" name="uname" required>
+          <input type="number" placeholder="Số điện thoại" name="uname" required>
+          <input type="password" placeholder="Mật khẩu" name="psw" required>
+          <input type="password" placeholder="Xác nhận lại mật khẩu" name="psw" required>
+          <button type="button" class="btn btn-primary loginbtn mb-3">Đăng ký</button>
+          <label>
+            <input type="checkbox" checked="checked" name="remember">Đồng ý với điều khoản và chính sách
+          </label>
+        </div></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Đóng</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
   <!-- Import Thu vien Jquery -->
