--- a/present.html
+++ b/present.html
@@ -323,10 +323,10 @@
             <input type="password" placeholder="Mật khẩu" name="psw" required>
               
             <button type="button" class="btn btn-primary loginbtn mb-3">Đăng nhập</button>
-            <label>
-              <input type="checkbox" checked="checked" name="remember"> Nhớ mật khẩu
-            </label>
-            <a href="">Bạn quên mật khẩu?</a>
+              <div class="d-flex checkbox">
+              <input type="checkbox" checked="checked" name="remember"> <p>Nhớ mật khẩu</p>
+            </div>
+            <div><a href="">Bạn quên mật khẩu?</a></div>
           </div>
         </div>
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0"><div class="container px-5 py-3 d-flex flex-column">
@@ -336,9 +336,9 @@
           <input type="password" placeholder="Mật khẩu" name="psw" required>
           <input type="password" placeholder="Xác nhận lại mật khẩu" name="psw" required>
           <button type="button" class="btn btn-primary loginbtn mb-3">Đăng ký</button>
-          <label>
-            <input type="checkbox" checked="checked" name="remember">Đồng ý với điều khoản và chính sách
-          </label>
+          <div class="d-flex checkbox justify-content-center">
+          <input type="checkbox" checked="checked" name="remember"><p>Đồng ý với điều khoản và chính sách</p>
+        </div>
         </div></div>
       </div>
       <div class="modal-footer">
