--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <div class="menu menu-sticky">
     <div class="menu-main container">
-      <ul class="menu-drop">
+      <ul class="menu-drop text-uppercase">
         <li><a href="./index.html">Trang chủ</a></li>
         <li><a href="./product.html">Sản phẩm</a></li>
         <li><a href="./news.html">Tin tức</a></li>
