--- a/detailproduct.html
+++ b/detailproduct.html
@@ -510,7 +510,7 @@
             <input type="email" placeholder="Email hoặc số điện thoại" name="uname" required>
             <input type="password" placeholder="Mật khẩu" name="psw" required>
               
-            <button type="button" class="btn btn-primary loginbtn mb-3">Đăng nhập</button>
+            <button type="button" class="btn btn-primary loginbtn mb-3 fw-bold">Đăng nhập</button>
               <div class="d-flex checkbox">
               <input type="checkbox" checked="checked" name="remember"> <p>Nhớ mật khẩu</p>
             </div>
@@ -523,7 +523,7 @@
           <input type="number" placeholder="Số điện thoại" name="uname" required>
           <input type="password" placeholder="Mật khẩu" name="psw" required>
           <input type="password" placeholder="Xác nhận lại mật khẩu" name="psw" required>
-          <button type="button" class="btn btn-primary loginbtn mb-3">Đăng ký</button>
+          <button type="button" class="btn btn-primary loginbtn mb-3 fw-bold">Đăng ký</button>
           <div class="d-flex checkbox justify-content-center">
           <input type="checkbox" checked="checked" name="remember"><p>Đồng ý với điều khoản và chính sách</p>
         </div>
