--- a/product.html
+++ b/product.html
@@ -152,215 +152,7 @@
                     </ul>
                   </div>
                     <div class="container">
-                        <div class="row" id="product-list">
-                            <!-- <div class="col-12 col-sm-6 col-lg-4">
-                                <div class="item">
-                                    <a href="#">
-                                      <div class="product-img"><img src="./assets/image/1.jpg" alt=""></div>
-                                      <div class="product-info">
-                                        <h6 class="pro-title">Ghế Soto Apartment</h6>
-                                        <div class="pro-price">2.250.000 đ</div>
-                                        <div class="pro-rating">
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <div class="rating-num text-dark">(72)</div>
-                                        </div>
-                                      </div>
-                                      <div class="add-cart">
-                                        <a href=""><button>Thêm vào giỏ hàng</button></a>
-                                      </div>
-                                    </a>
-                                  </div>
-
-                            </div>
-                            <div class="col-12 col-sm-6 col-lg-4">
-                                <div class="item">
-                                    <a href="#">
-                                      <div class="product-img"><img src="./assets/image/1.jpg" alt=""></div>
-                                      <div class="product-info">
-                                        <h6 class="pro-title">Ghế Soto Apartment</h6>
-                                        <div class="pro-price">2.250.000 đ</div>
-                                        <div class="pro-rating">
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <div class="rating-num text-dark">(72)</div>
-                                        </div>
-                                      </div>
-                                      <div class="add-cart">
-                                        <a href=""><button>Thêm vào giỏ hàng</button></a>
-                                      </div>
-                                    </a>
-                                  </div>
-                            </div>
-                            <div class="col-12 col-sm-6 col-lg-4">
-                            <div class="item">
-                              <a href="">
-                              <div class="product-img"><img src="./assets/image/2.JPG" alt=""></div>
-                              <div class="product-info">
-                                <h6 class="pro-title">Ghế Soto Chair</h6>
-                                <div class="pro-price">6.550.000 đ</div>
-                                <div class="pro-rating">
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star-half-alt"></i>
-                                  <div class="rating-num text-dark">(59)</div>
-                                </div>
-                              </div>
-                              <div class="add-cart">
-                                <a href=""><button>Thêm vào giỏ hàng</button></a>
-                              </div>
-                              </a>
-                              </div>
-                            </div>
-                            <div class="col-12 col-sm-6 col-lg-4">
-                          
-                            <div class="item">
-                              <a href="">
-                              <div class="product-img"><img src="./assets/image/3.jpg" alt=""></div>
-                              <div class="product-info">
-                                <h6 class="pro-title">Bàn Santa Rosa</h6>
-                                <div class="pro-price">3.350.000 đ</div>
-                                <div class="pro-rating">
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <div class="rating-num text-dark">(46)</div>
-                                </div>
-                              </div>
-                              <div class="add-cart">
-                                <a href=""><button>Thêm vào giỏ hàng</button></a>
-                              </div>
-                            </a>
-                            </div>
-                            </div>
-                            <div class="col-12 col-sm-6 col-lg-4">
-                          
-                            <div class="item">
-                              <a href="">
-                              <div class="product-img"><img src="./assets/image/4.jpg" alt=""></div>
-                              <div class="product-info">
-                                <h6 class="pro-title">Ghế Soto Chair</h6>
-                                <div class="pro-price">8.250.000 đ</div>
-                                <div class="pro-rating">
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star-half-alt"></i>
-                                  <div class="rating-num text-dark">(42)</div>
-                                </div>
-                              </div>
-                              <div class="add-cart">
-                                <a href=""><button>Thêm vào giỏ hàng</button></a>
-                              </div>
-                            </a>
-                            </div>
-                            </div>
-
-                            <div class="col-12 col-sm-6 col-lg-4">
-                            <div class="item">
-                              <a href="">
-                              <div class="product-img">
-                                <img src="./assets/image/5.jpg" alt=""></div>
-                              <div class="product-info">
-                                <h6 class="pro-title">Ghế Soto Chair</h6>
-                                <div class="pro-price">2.250.000 đ</div>
-                                <div class="pro-rating">
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star"></i>
-                                  <i class="fa-solid fa-star-half-alt"></i>
-                                  <div class="rating-num text-dark">(38)</div>
-                                </div>
-                              </div>
-                              <div class="add-cart">
-                                <a href=""><button>Thêm vào giỏ hàng</button></a>
-                              </div>
-                              </a>
-                              </div>
-                              </div>
-
-
-                            <div class="col-12 col-sm-6 col-lg-4">
-                                <div class="item">
-                                    <a href="#">
-                                      <div class="product-img"><img src="./assets/image/1.jpg" alt=""></div>
-                                      <div class="product-info">
-                                        <h6 class="pro-title">Ghế Soto Apartment</h6>
-                                        <div class="pro-price">2.250.000 đ</div>
-                                        <div class="pro-rating">
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <div class="rating-num text-dark">(72)</div>
-                                        </div>
-                                      </div>
-                                      <div class="add-cart">
-                                        <a href=""><button>Thêm vào giỏ hàng</button></a>
-                                      </div>
-                                    </a>
-                                  </div>
-
-                            </div>
-                            <div class="col-12 col-sm-6 col-lg-4">
-                                <div class="item">
-                                    <a href="#">
-                                      <div class="product-img"><img src="./assets/image/1.jpg" alt=""></div>
-                                      <div class="product-info">
-                                        <h6 class="pro-title">Ghế Soto Apartment</h6>
-                                        <div class="pro-price">2.250.000 đ</div>
-                                        <div class="pro-rating">
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <div class="rating-num text-dark">(72)</div>
-                                        </div>
-                                      </div>
-                                      <div class="add-cart">
-                                        <a href=""><button>Thêm vào giỏ hàng</button></a>
-                                      </div>
-                                    </a>
-                                  </div>
-
-                            </div>
-                            <div class="col-12 col-sm-6 col-lg-4">
-                                <div class="item">
-                                    <a href="#">
-                                      <div class="product-img"><img src="./assets/image/1.jpg" alt=""></div>
-                                      <div class="product-info">
-                                        <h6 class="pro-title">Ghế Soto Apartment</h6>
-                                        <div class="pro-price">2.250.000 đ</div>
-                                        <div class="pro-rating">
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <i class="fa-solid fa-star"></i>
-                                          <div class="rating-num text-dark">(72)</div>
-                                        </div>
-                                      </div>
-                                      <div class="add-cart">
-                                        <a href=""><button>Thêm vào giỏ hàng</button></a>
-                                      </div>
-                                    </a>
-                                  </div>
-                            </div> -->
-                        </div>
+                        <div class="row" id="product-list"></div>
                     </div>
                   <div>
                     <!-- <div class="list-page d-flex justify-content-center align-items-center">
