--- a/cart.html
+++ b/cart.html
@@ -333,6 +333,7 @@
                 </div>
               </div>
         </div>
+</div>
 
 
 
@@ -402,6 +403,7 @@
   </div>
   </div>
 </div>
+
 <div class="footer-bottom bg-black text-light text-center">© 2007 - 2023 Công Ty Cổ Phần Bán Lẻ Nội Thất Số Interior</div>
 
 <div class="modal fade mt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
