--- a/detailproduct.html
+++ b/detailproduct.html
@@ -119,7 +119,7 @@
                       </div>
                       <div class="imgpro-bottom d-flex justify-content-center">
                         <div class="sm-img selected" onclick="changeBorder(this)">
-                          <img src="./assets/image/2.jpg" alt="" onclick="changeImage(this)">
+                          <img src="./assets/image/2.JPG" alt="" onclick="changeImage(this)">
                         </div>
                         <div class="sm-img" onclick="changeBorder(this)">
                           <img src="./assets/image/2g.JPG" alt="" onclick="changeImage(this)">
